2010-01-27  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingPanel.cs (BringIndexIntoView): THis method appears
	to be a no-op from my experimenting.

2010-01-27  Alan McGovern  <amcgovern@novell.com>

	* VirtualizingPanel.cs: Revert r150235 as it caused a few
	  regressions in moon-unit.

2010-01-26  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingPanel.cs: Connect to the owner's Items
	CollectionChanged event to properly hook up OnClearChildren().

	* VirtualizingStackPanel.cs (OnItemsChanged): Adjust our current
	Vertical/HorizontalOffset values when items are removed from
	various points in the list relative to our current view.

2010-01-26  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (OnItemsChanged): We need to
	invalidate our Measure and ScrollInfo here as there is a good
	chance they have changed.
	(OnClearChildren): We need to call InvalidateMeasure() here too.

2010-01-25  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (MakeVisible): Implemented.
	(RemoveUnusedContainers): Implemented support for
	VirtualiztionMode.

2010-01-25  Alan McGovern  <amcgovern@novell.com>

	* ItemsPresenter.cs: Hook up the ItemsPresenter to its
	  ContentControl inside the InvokeOnApplyTemplate method to
	  keep gui-compare happy. It's not hugely important as the
	  class is sealed anyway.

2010-01-22  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingPanel.cs (OnItemsChanged): I don't think this
	virtual method is supposed to do anything. It's just a hook for
	subclasses to override.

2010-01-22  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs:
	* ItemContainerGenerator.cs: Fix up the interactions between
	  the various ItemsChanged events and OnItemsChanged methods.
	  I think we're now clearing containers and refreshing the ICG
	  in the correct place aswell.

2010-01-21  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (ArrangeOverride): Set the proper X/Y